--- a/index.html
+++ b/index.html
@@ -4,7 +4,22 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>MedicalAppointmentBooking</title>
+    <!-- IMPORTANT: Ensure these styles are present and correct -->
+    <style>
+      html, body {
+        margin: 0;
+        padding: 0;
+        /* Allow horizontal scrolling when content exceeds viewport width */
+        overflow-x: auto;
+        /* Allow vertical scrolling as needed */
+        overflow-y: auto;
+      }
+      body {
+        /* Force body to be at least 1920px wide to ensure content pushes it */
+        min-width: 1920px;
+      }
+    </style>
   </head>
   <body>
     <div id="root"></div>
